# percolation-theory

./: .dockerignore  .env.example  .gitignore  Estimation.py  Percolation.py  README.md  Test_and_benchmark.py  Theory.md  docker-compose.yml  dockerfile  docs.txt  frontend.md  profiling.py  pytest.ini  requirements.txt  setup.py  test  test_viz.py
.github/workflows/: api.yml  nightly.yml  tests.yml
Search/: BFS.py  README.md  UnionFind.py  __init__.py  percolation_cpp.pyi
api/: README.md  __init__.py  config.py  main.py  models.py
api/routes/: health.py  simulation.py  visualization.py
api/services/: percolation_service.py
cli_scripts/: visualize_grid.py
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  union_find.hpp
docs/: algorithms.md  development.md  theory.md  troubleshooting.md  usage.md
frontend/: README.md  dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AlgorithmSelector.tsx  ErrorBoundary.tsx  GridVisualization.tsx  ParameterControls.tsx  PhaseTransitionPlot.tsx  SimulationResults.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: README.md  conftest.py  test_algorithms.py  test_cpp_build.py  test_pc_estimation.py  test_performance.py
tests_api/: conftest.py  test_health.py  test_simulation.py
visualization/: README.md  config.py  core.py
visualization/renderers/: matplotlib.py
